--- a/hello.css
+++ b/hello.css
@@ -1,7 +1,5 @@
-.example {
-    display: grid;
-    transition: all .5s;
-    user-select: none;
-    background: linear-gradient(to bottom, white, black);
-}
+$bgColor: yellow;
 
+.hello {
+    background-color: $bgColor;
+}
